[project]
name = "monarch-tools"
version = "0.1.0"
description = "Monarch Tools CLI scaffolding (Phase 1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["monarch_tools*"]
